# XTU_Lab_Exam

Classes/: 选修选课指南（仅供参考）.doc
Classes/Advanced_Mathematics/: 2019级《高等数学（上）》课程期中考试试卷及答案.docx
Classes/Advanced_Mathematics/高数下课件/: D8_1向量及运算（黑白）.ppt  D8_2点积叉积（黑白） (1).ppt  D8_3平面及其方程（黑白）.ppt  D8_4空间直线及其方程（黑白）.ppt  D8_5曲面及其方程（黑白）.ppt  D8_6空间曲线及其方程（黑白）.ppt  D8习题课（黑白）.ppt  D9_1基本概念（黑白）.ppt  D9_2偏导数（黑白）.ppt  D9_3全微分（黑白）.ppt  D9_4复合求导（黑白）.ppt
Classes/C/课件/: 第10章 对文件的输入输出.ppt  第1章 程序设计和C语言.ppt  第2章 算法---程序的灵魂.ppt  第3章 最简单的C程序设计.ppt  第4章 选择结构程序设计.ppt  第5章 循环结构程序设计.ppt  第6章 利用数组处理批量数据.ppt  第7章 用函数实现模块化程序设计.ppt  第8章 善于利用指针.ppt  编程准备.ppt  (+2 more)
Classes/Data_Structure/: 数据结构课程实验报告.md
Classes/Discrete_Mathematics/: 离散习题-图论&代数结构.docx  离散习题-集合论与数理逻辑.docx
XTU_C_Big_Homework/ipTools/: CMakeLists.txt  Config.h  Controller.cpp  Controller.h  Doxyfile  View.cpp  View.h  dataModel.cpp  dataModel.h  ipModel.cpp  ipModel.h  linkedList.h  main.cpp  main.h  readme.md  vsc.code-workspace
XTU_Lab_Exam/: Examiner.py  README.md
XTU_OJ_Answer/: README.md
XTU_OJ_Answer/codes/: 1000.cpp  1035.cpp  1037.cpp  1054.cpp  1054_1906652.cpp  1055.cpp  1056.cpp  1057.cpp  1058.cpp  1059.cpp  1061.cpp  1061_1978538.cpp  1061_1978562.cpp  1062.cpp  1063.cpp  1064.cpp  1065.cpp  1066.cpp  1067.cpp  1068.cpp  1069.cpp  1070.cpp  1071.cpp  1072.cpp  1073.cpp  1074.cpp  1075.cpp  1076.cpp  1076_1881726.cpp  1076_1881753.cpp  1076_1881756.cpp  1076_1881757.cpp  1077.cpp  1078.cpp  1078_1978560.cpp  1079.cpp  1080.cpp  1081.cpp  1082.cpp  1083.cpp  (+177 more)
XTU_OJ_Parser/: README.md  XTUOJDumpCodeParser.py  oj_parser.py
(+204 files in other folders)
